--- a/purplespag.html
+++ b/purplespag.html
@@ -5,7 +5,7 @@ permalink: /purplespag/
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"
+    <meta charset="utf-8">
     <title>purple spaghetti</title>
     <meta name="viewport" content="width=device-width">
     <style>
